# ti-ppo

./: .gitignore  FINDINGS.md  README.md  RESEARCH_LOG.md  benchmark_results.json  benchmark_v2_results.json  benchmark_v4_results.json  benchmark_v5_results.json  entropy_kl_analysis.json  paper.tex  presentation.pptx  presentation_slides.tex  pyproject.toml  speaker_notes.txt
logs/: compiled_results.json
logs/benchmark/: benchmark_gsm8k_results_0_uniform.json  benchmark_gsm8k_results_1_aiti_advantage.json  benchmark_gsm8k_results_1_entropy.json  benchmark_gsm8k_results_2_aiti_entropy.json  benchmark_gsm8k_results_2_moai_advantage_mono.json  benchmark_gsm8k_results_3_moai_advantage_mono.json  benchmark_gsm8k_results_3_moai_entropy_mono.json  benchmark_gsm8k_results_4_moai_advantage_mono.json  benchmark_gsm8k_results_5_moai_entropy_mono.json  benchmark_gsm8k_results_6_moai_entropy_mono.json  benchmark_gsm8k_results_7_advantage.json  benchmark_gsm8k_results_combined.json  benchmark_math_results_0_uniform.json  benchmark_math_results_1_aiti_advantage.json  benchmark_math_results_1_entropy.json  benchmark_math_results_2_aiti_entropy.json  (+9 more)
scripts/: analyze_entropy_kl.py  benchmark.py  benchmark_gsm8k.py  benchmark_math.py  benchmark_mbpp.py  benchmark_v2.py  benchmark_v3.py  benchmark_v4.py  benchmark_v5.py  benchmark_v5b.py  compare_methods.py  eval.py  eval_gsm8k.py  make_pptx.py  plot_all_gsm8k.py  plot_results.py  sweep_batchsize.py  sweep_epsilon.py  train.py  train_math_full.py
ti_ppo/: __init__.py  config.py  token_importance.py  trainer.py  value_head.py
(+25 files in other folders)
